--- a/ts/packages/agents/browser/src/extension/views/knowledgePanel.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgePanel.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <title>TypeAgent Knowledge Panel</title>
-    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
       rel="stylesheet"
@@ -354,7 +354,7 @@
       </div>
     </div>
 
-    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="knowledgePanel.js"></script>
   </body>
 </html>
