Rename extension pages

--- a/ts/packages/agents/browser/src/extension/views/actionsLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/actionsLibrary.html
@@ -809,7 +809,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="actionIndex.js"></script>
+    <script src="actionsLibrary.js"></script>
     <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../vendor/prism/prism.js"></script>
     <script src="../vendor/prism/prism-typescript.js"></script>
