--- a/ts/packages/agents/browser/src/extension/views/pageActions.html
+++ b/ts/packages/agents/browser/src/extension/views/pageActions.html
@@ -354,7 +354,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="sidepanel.js"></script>
+    <script src="pageActions.js"></script>
     <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../vendor/prism/prism.js"></script>
     <script src="../vendor/prism/prism-typescript.js"></script>
