--- a/ts/packages/agents/browser/src/extension/views/pageKnowledge.html
+++ b/ts/packages/agents/browser/src/extension/views/pageKnowledge.html
@@ -355,6 +355,6 @@
     </div>
 
     <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="knowledgePanel.js"></script>
+    <script src="pageKnowledge.js"></script>
   </body>
 </html>
