--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -11,7 +11,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="websiteLibraryPanel.css" />
+    <link rel="stylesheet" href="knowledgeLibrary.css" />
   </head>
   <body>
     <!-- Top Navigation Bar -->
@@ -627,6 +627,6 @@
     </div>
 
     <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="websiteLibraryPanel.js"></script>
+    <script src="knowledgeLibrary.js"></script>
   </body>
 </html>
