Move the extension's view pages into a separate folder (#1306)

--- a/ts/packages/agents/browser/src/extension/views/pageActions.html
+++ b/ts/packages/agents/browser/src/extension/views/pageActions.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Action Discovery Panel</title>
-    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="vendor/prism/prism.css" />
+    <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../vendor/prism/prism.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
@@ -354,10 +354,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="sidepanel.js"></script>
-    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="vendor/prism/prism.js"></script>
-    <script src="vendor/prism/prism-typescript.js"></script>
-    <script src="vendor/prism/prism-json.js"></script>
+    <script src="pageActions.js"></script>
+    <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/prism/prism.js"></script>
+    <script src="../vendor/prism/prism-typescript.js"></script>
+    <script src="../vendor/prism/prism-json.js"></script>
   </body>
 </html>
