--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -6,12 +6,12 @@
   <head>
     <meta charset="utf-8" />
     <title>TypeAgent Website Library</title>
-    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../vendor/bootstrap/bootstrap.min.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="websiteLibraryPanel.css" />
+    <link rel="stylesheet" href="knowledgeLibrary.css" />
   </head>
   <body>
     <!-- Top Navigation Bar -->
@@ -626,7 +626,7 @@
       </div>
     </div>
 
-    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="websiteLibraryPanel.js"></script>
+    <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="knowledgeLibrary.js"></script>
   </body>
 </html>
