--- a/ts/packages/agents/browser/src/extension/views/actionsLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/actionsLibrary.html
@@ -583,6 +583,33 @@
           transform: translateY(0);
         }
       }
+
+      /* Action View Modal Styles */
+      .action-view-iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 0 0 0.375rem 0.375rem;
+      }
+
+      .modal-xl .modal-body {
+        overflow: hidden;
+      }
+
+      .modal-xl {
+        max-width: 90vw;
+      }
+
+      .modal-xl .modal-content {
+        height: 90vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .modal-xl .modal-body {
+        flex: 1;
+        min-height: 0;
+      }
     </style>
   </head>
   <body>
@@ -711,7 +738,7 @@
 
     <!-- Action Details Modal -->
     <div class="modal fade" id="actionDetailsModal" tabindex="-1">
-      <div class="modal-dialog modal-lg">
+      <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="actionDetailsModalTitle">
@@ -723,17 +750,12 @@
               data-bs-dismiss="modal"
             ></button>
           </div>
-          <div class="modal-body" id="actionDetailsModalBody">
-            <!-- Action details will be populated here -->
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
+          <div
+            class="modal-body p-0"
+            id="actionDetailsModalBody"
+            style="height: 80vh"
+          >
+            <!-- Iframe will be inserted here -->
           </div>
         </div>
       </div>
