Update the static plan displayed in the modal popup

--- a/ts/packages/agents/browser/src/views/client/plans/index.html
+++ b/ts/packages/agents/browser/src/views/client/plans/index.html
@@ -61,6 +61,11 @@
                 ><i class="fas fa-project-diagram"></i
               ></span>
             </div>
+
+            <!-- Close button for action view mode -->
+            <button id="close-modal-button" class="icon-button" title="Close" style="display: none;">
+              <i class="fas fa-times"></i>
+            </button>
           </div>
         </div>
 
