--- a/ts/packages/agents/browser/src/extension/views/actionsLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/actionsLibrary.html
@@ -589,7 +589,7 @@
         width: 100%;
         height: 100%;
         border: none;
-        border-radius: 0 0 0.375rem 0.375rem;
+        border-radius: 0.375rem 0.375rem 0.375rem 0.375rem;
       }
 
       .modal-xl .modal-body {
@@ -609,6 +609,21 @@
       .modal-xl .modal-body {
         flex: 1;
         min-height: 0;
+      }
+
+      /* Action View Modal - Hide header for iframe-only display */
+      .action-view-modal .modal-header {
+        display: none !important;
+      }
+      
+      .action-view-modal .modal-body {
+        height: 100vh !important;
+        max-height: 100vh !important;
+      }
+      
+      .action-view-modal .modal-content {
+        height: 100vh !important;
+        max-height: 100vh !important;
       }
     </style>
   </head>
@@ -740,7 +755,7 @@
     <div class="modal fade" id="actionDetailsModal" tabindex="-1">
       <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header" id="actionDetailsModalHeader">
             <h5 class="modal-title" id="actionDetailsModalTitle">
               Action Details
             </h5>
