Update conversion of stored action info to webplandata

--- a/ts/packages/agents/browser/src/views/client/plans/index.html
+++ b/ts/packages/agents/browser/src/views/client/plans/index.html
@@ -26,7 +26,10 @@
         <!-- Header/Toolbar section -->
         <div class="toolbar">
           <div class="toolbar-group">
-            <h1 id="plan-title">Dynamic Web Plan Visualizer</h1>
+            <div class="title-container">
+              <h1 id="plan-title">Dynamic Web Plan Visualizer</h1>
+              <p id="plan-description" class="plan-description" style="display: none;"></p>
+            </div>
           </div>
 
           <div class="toolbar-group"></div>
