--- a/ts/packages/agents/browser/src/views/client/plans/index.html
+++ b/ts/packages/agents/browser/src/views/client/plans/index.html
@@ -28,7 +28,11 @@
           <div class="toolbar-group">
             <div class="title-container">
               <h1 id="plan-title">Dynamic Web Plan Visualizer</h1>
-              <p id="plan-description" class="plan-description" style="display: none;"></p>
+              <p
+                id="plan-description"
+                class="plan-description"
+                style="display: none"
+              ></p>
             </div>
           </div>
 
@@ -66,7 +70,12 @@
             </div>
 
             <!-- Close button for action view mode -->
-            <button id="close-modal-button" class="icon-button" title="Close" style="display: none;">
+            <button
+              id="close-modal-button"
+              class="icon-button"
+              title="Close"
+              style="display: none"
+            >
               <i class="fas fa-times"></i>
             </button>
           </div>
