Use the visual plan preview to show action states in the actionLibrary page (#1317)
- Add modal popup to show authored action/plan preview on the
actionsLibrary page
- Add IPC to enable the plan service view/update/delete actions
- Convert actionJson to the webPlanData needed to display in the plan
visualization

--- a/ts/packages/agents/browser/src/views/client/plans/index.html
+++ b/ts/packages/agents/browser/src/views/client/plans/index.html
@@ -26,7 +26,14 @@
         <!-- Header/Toolbar section -->
         <div class="toolbar">
           <div class="toolbar-group">
-            <h1 id="plan-title">Dynamic Web Plan Visualizer</h1>
+            <div class="title-container">
+              <h1 id="plan-title">Dynamic Web Plan Visualizer</h1>
+              <p
+                id="plan-description"
+                class="plan-description"
+                style="display: none"
+              ></p>
+            </div>
           </div>
 
           <div class="toolbar-group"></div>
@@ -61,6 +68,16 @@
                 ><i class="fas fa-project-diagram"></i
               ></span>
             </div>
+
+            <!-- Close button for action view mode -->
+            <button
+              id="close-modal-button"
+              class="icon-button"
+              title="Close"
+              style="display: none"
+            >
+              <i class="fas fa-times"></i>
+            </button>
           </div>
         </div>
 
